Add submission protobuf serializer

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -4,10 +4,13 @@ akka {
     warn-about-java-serializer-usage = on
     serializers {
       institution = "hmda.persistence.serialization.institutions.InstitutionProtobufSerializer"
+      submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionModified" = institution
+      "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
+      "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionStatusUpdated" = submission
     }
   }
   persistence {
