--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -4,10 +4,13 @@ akka {
     warn-about-java-serializer-usage = off
     serializers {
       institution = "hmda.persistence.serialization.institutions.InstitutionProtobufSerializer"
+      filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionModified" = institution
+      "hmda.persistence.messages.events.institutions.FilingEvents$FilingCreated" = filing
+      "hmda.persistence.messages.events.institutions.FilingEvents$FilingStatusUpdated" = filing
     }
   }
   persistence {
