--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -163,6 +163,11 @@ hmda.validation.macro {
     currentYearProportion = 0.4
     relativeProportion = 0.2
   }
+  Q072 {
+    currentYearThreshold = 2000
+    currentYearProportion = 0.3
+    relativeProportion = 0.1
+  }
   Q073 {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
