--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -158,6 +158,11 @@ hmda.validation.macro {
   Q065 {
     hoepaLoanLimit = 200
   }
+  Q070 {
+    currentYearThreshold = 10000
+    currentYearProportion = 0.2
+    relativeProportion = 0.1
+  }
   Q071 {
     currentYearThreshold = 2500
     currentYearProportion = 0.3
