Add Q075 Specs and skeleton

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -181,6 +181,10 @@ hmda.validation.macro {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
   }
+  Q075{
+    threshold = 750
+    relativeProportion = 0.2
+  }
   Q080 {
     numOfLarsMultiplier = 0.5
   }
