Persist Q076 stats, corrections to q075 stats persistence

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -181,7 +181,11 @@ hmda.validation.macro {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
   }
-  Q075{
+  Q075 {
+    threshold = 750
+    relativeProportion = 0.2
+  }
+  Q076 {
     threshold = 750
     relativeProportion = 0.2
   }
