Add upload protobuf serializer

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -7,6 +7,7 @@ akka {
       filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
       submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
       larValidated = "hmda.persistence.serialization.validation.LarValidatedProtobufSerializer"
+      upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -16,6 +17,8 @@ akka {
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionStatusUpdated" = submission
       "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = larValidated
+      "hmda.persistence.messages.events.processing.FileUploadEvents$LineAdded" = upload
+      "hmda.persistence.messages.events.processing.FileUploadEvents$FileNameAdded" = upload
     }
   }
   persistence {
