Turn java serialization warning on in demo mode

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -1,7 +1,7 @@
 akka {
   loglevel = "INFO"
   actor {
-    warn-about-java-serializer-usage = off
+    warn-about-java-serializer-usage = on
     serializers {
       institution = "hmda.persistence.serialization.institutions.InstitutionProtobufSerializer"
       filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
