Add clustering support for API

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -4,6 +4,33 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
+
+  actor {
+    provider = cluster
+  }
+
+  remote {
+    log-remote-lifecycle-events = error
+    netty.tcp {
+      hostname = ${clustering.ip}
+      port = ${clustering.port}
+    }
+  }
+
+  cluster {
+    seed-nodes = [
+      "akka.tcp://"${clustering.name}"@"${clustering.ip}":"${clustering.seed-port}
+    ]
+  }
+
+}
+
+clustering {
+  name = "hmda"
+  ip = "127.0.0.1"
+  port = 2551
+  port = ${?APP_PORT}
+  seed-port = 2551
 }
 
 hmda {
