Add constructr to bootstrap cluster

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -18,19 +18,21 @@ akka {
   }
 
   cluster {
-    seed-nodes = [
-      "akka.tcp://"${clustering.name}"@"${clustering.ip}":"${clustering.seed-port}
-    ]
+    failure-detector.threshold = 12 //Increase value for AWS environments
+    metrics.enabled = off
   }
 
+  extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
+
 }
+
+constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
 
 clustering {
   name = "hmda"
   ip = "127.0.0.1"
-  port = 2551
+  port = 0
   port = ${?APP_PORT}
-  seed-port = 2551
 }
 
 hmda {
