--- a/api/src/main/resources/application-dev.conf
+++ b/api/src/main/resources/application-dev.conf
@@ -4,11 +4,40 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
+
+  actor {
+    provider = cluster
+  }
+
+  remote {
+    log-remote-lifecycle-events = error
+    netty.tcp {
+      hostname = ${clustering.ip}
+      port = ${clustering.port}
+    }
+  }
+
+  cluster {
+    failure-detector.threshold = 12 //Increase value for AWS environments
+    metrics.enabled = off
+  }
+
+  extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
+
+}
+
+constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
+
+clustering {
+  name = "hmda"
+  ip = "127.0.0.1"
+  port = 0
+  port = ${?APP_PORT}
 }
 
 hmda {
   actor {
-    timeout = 5
+    timeout = 20
   }
   http {
     host = "0.0.0.0"
