--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -8,6 +8,7 @@ akka {
       submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
       larValidated = "hmda.persistence.serialization.validation.LarValidatedProtobufSerializer"
       upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
+      larStats = "hmda.persistence.serialization.validation.SubmissionLarStatsProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -19,6 +20,8 @@ akka {
       "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = larValidated
       "hmda.persistence.messages.events.processing.FileUploadEvents$LineAdded" = upload
       "hmda.persistence.messages.events.processing.FileUploadEvents$FileNameAdded" = upload
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
     }
   }
   persistence {
