application-dev updated

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -9,6 +9,7 @@ akka {
       parser = "hmda.persistence.serialization.parser.HmdaFileParserProtobufSerializer"
       larValidated = "hmda.persistence.serialization.validation.LarValidatedProtobufSerializer"
       upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
+      larStats = "hmda.persistence.serialization.validation.SubmissionLarStatsProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -24,6 +25,8 @@ akka {
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$TsParsedErrors" = parser
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsed" = parser
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsedErrors" = parser
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
     }
   }
   persistence {
