--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -10,6 +10,8 @@ akka {
       larValidated = "hmda.persistence.serialization.validation.LarValidatedProtobufSerializer"
       upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
       larStats = "hmda.persistence.serialization.validation.SubmissionLarStatsProtobufSerializer"
+      validator = "hmda.persistence.serialization.validation.HmdaFileValidatorProtobufSerializer"
+      validationStats = "hmda.persistence.serialization.validation.ValidationStatsProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -27,6 +29,17 @@ akka {
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsedErrors" = parser
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$TsSyntacticalError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$TsValidityError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$TsQualityError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$LarSyntacticalError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$LarValidityError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$LarQualityError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$LarMacroError" = validator
+      "hmda.persistence.messages.events.processing.HmdaFileValidatorEvents$EditsVerified" = validator
+      "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionSubmittedTotalsAdded" = validationStats
+      "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionTaxIdAdded" = validationStats
+      "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionMacroStatsAdded" = validationStats
     }
   }
   persistence {
