--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -4,6 +4,7 @@ akka {
     warn-about-java-serializer-usage = on
     serializers {
       institution = "hmda.persistence.serialization.institutions.InstitutionProtobufSerializer"
+      institutionViewState = "hmda.query.serialization.InstitutionViewProtobufSerializer"
       submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
       filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
       parser = "hmda.persistence.serialization.parser.HmdaFileParserProtobufSerializer"
@@ -14,6 +15,7 @@ akka {
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionModified" = institution
+      "hmda.query.view.institutions.InstitutionView$InstitutionViewState" = institutionViewState
       "hmda.persistence.messages.events.institutions.FilingEvents$FilingCreated" = filing
       "hmda.persistence.messages.events.institutions.FilingEvents$FilingStatusUpdated" = filing
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
