update config to correct location

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -1,3 +1,16 @@
+akka {
+  loglevel = "INFO"
+  actor {
+    warn-about-java-serializer-usage = on
+    serializers {
+      institutionViewState = "hmda.query.serialization.InstitutionViewProtobufSerializer"
+    }
+    serialization-bindings {
+      "hmda.query.view.institutions.InstitutionView$InstitutionViewState" = institutionViewState
+    }
+  }
+}
+
 hmda {
   journal.snapshot.counter = 100
   query {
