--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -4,9 +4,11 @@ akka {
     warn-about-java-serializer-usage = on
     serializers {
       institutionViewState = "hmda.query.serialization.InstitutionViewProtobufSerializer"
+      filingViewState = "hmda.query.serialization.HmdaFilingViewProtobufSerializer"
     }
     serialization-bindings {
       "hmda.query.view.institutions.InstitutionView$InstitutionViewState" = institutionViewState
+      "hmda.query.view.filing.HmdaFilingView$FilingViewState" = filingViewState
     }
   }
 }
