--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -7,7 +7,7 @@ akka {
       submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
       filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
       parser = "hmda.persistence.serialization.parser.HmdaFileParserProtobufSerializer"
-      larValidated = "hmda.persistence.serialization.validation.LarValidatedProtobufSerializer"
+      CommonHmdaValidator = "hmda.persistence.serialization.validation.CommonHmdaValidatorProtobufSerializer"
       upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
       larStats = "hmda.persistence.serialization.validation.SubmissionLarStatsProtobufSerializer"
       submissionFSM = "hmda.persistence.serialization.submission.SubmissionFSMProtobufSerializer"
@@ -22,7 +22,8 @@ akka {
       "hmda.persistence.messages.events.institutions.FilingEvents$FilingStatusUpdated" = filing
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionStatusUpdated" = submission
-      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = larValidated
+      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = CommonHmdaValidator
+      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$TsValidated" = CommonHmdaValidator
       "hmda.persistence.messages.events.processing.FileUploadEvents$LineAdded" = upload
       "hmda.persistence.messages.events.processing.FileUploadEvents$FileNameAdded" = upload
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$TsParsed" = parser
