--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -16,3 +16,10 @@ db {
   }
 }
 
+cassandra {
+  host = "127.0.0.1"
+  host = ${CASSANDRA_CLUSTER_HOSTS}
+  port = 9042
+  port = ${CASSANDRA_CLUSTER_PORT}
+  keyspace = "hmda_query"
+}
