--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -7,7 +7,7 @@ akka {
       submission = "hmda.persistence.serialization.submission.SubmissionProtobufSerializer"
       filing = "hmda.persistence.serialization.filing.FilingProtobufSerializer"
       parser = "hmda.persistence.serialization.parser.HmdaFileParserProtobufSerializer"
-      commonHmdaValidator = "hmda.persistence.serialization.validation.CommonHmdaValidatorProtobufSerializer"
+      hmdaValidator = "hmda.persistence.serialization.validation.HmdaValidatorProtobufSerializer"
       upload = "hmda.persistence.serialization.upload.UploadProtobufSerializer"
       larStats = "hmda.persistence.serialization.validation.SubmissionLarStatsProtobufSerializer"
       submissionFSM = "hmda.persistence.serialization.submission.SubmissionFSMProtobufSerializer"
@@ -21,8 +21,8 @@ akka {
       "hmda.persistence.messages.events.institutions.FilingEvents$FilingStatusUpdated" = filing
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionStatusUpdated" = submission
-      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = commonHmdaValidator
-      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$TsValidated" = commonHmdaValidator
+      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = hmdaValidator
+      "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$TsValidated" = hmdaValidator
       "hmda.persistence.messages.events.processing.FileUploadEvents$LineAdded" = upload
       "hmda.persistence.messages.events.processing.FileUploadEvents$FileNameAdded" = upload
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$TsParsed" = parser
