irs removed from query, added to validation, serialized

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -32,6 +32,7 @@ akka {
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsedErrors" = parser
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$IrsStatsUpdated" = larStats
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionFSMCreated" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploading" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploaded" = submissionFSM
@@ -54,6 +55,7 @@ akka {
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionSubmittedTotalsAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionTaxIdAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionMacroStatsAdded" = validationStats
+      "hmda.persistence.messages.events.validation.ValidationStatsEvents$IrsStatsAdded" = validationStats
     }
   }
   persistence {
