--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -31,6 +31,7 @@ akka {
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsedErrors" = parser
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$IrsStatsUpdated" = larStats
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionFSMCreated" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploading" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploaded" = submissionFSM
@@ -53,6 +54,7 @@ akka {
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionSubmittedTotalsAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionTaxIdAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionMacroStatsAdded" = validationStats
+      "hmda.persistence.messages.events.validation.ValidationStatsEvents$IrsStatsAdded" = validationStats
     }
   }
   persistence {
