--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -73,6 +73,7 @@ cassandra-journal {
   keyspace-autocreate-retries = 5
   connect-retries = 10
   connect-retry-delay = 5s
+  reconnect-max-delay = 60s
 }
 
 cassandra-snapshot-store {
@@ -84,11 +85,13 @@ cassandra-snapshot-store {
   keyspace-autocreate-retries = 5
   connect-retries = 10
   connect-retry-delay = 5s
+  reconnect-max-delay = 60s
 }
 
 cassandra-query-journal {
   refresh-interval = 5s
   refresh-interval = ${?QUERY_JOURNAL_REFRESH_INTERVAL}
+  read-retries = 10
 }
 
 hmda {
