--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -20,6 +20,12 @@ akka {
   cluster {
     failure-detector.threshold = 12 //Increase value for AWS environments
     metrics.enabled = off
+
+    retry-unsuccessful-join-after = 20s
+
+    //DON'T USE IN PRODUCTION!!!!!
+    auto-down-unreachable-after = 10s
+
   }
 
   extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
