--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -37,4 +37,6 @@ cassandra {
   port = 9142
   port = ${CASSANDRA_CLUSTER_PORT}
   keyspace = "hmda_query"
+  retries = 60
+  retry-interval = 1000
 }
