--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -35,7 +35,7 @@ cassandra {
   host = "127.0.0.1"
   host = ${CASSANDRA_CLUSTER_HOSTS}
   port = 9142
-  port = ${CASSANDRA_CLUSTER_PORT}
+  //port = ${CASSANDRA_CLUSTER_PORT}
   keyspace = "hmda_query"
   retries = 60
   retry-interval = 1000
