--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -25,6 +25,10 @@ hmda {
   isDemo = true
 }
 
+akka.persistence.journal.plugin = "inmemory-journal"
+akka.persistence.query.journal.id = "inmemory-read-journal"
+akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+
 cassandra {
   host = "127.0.0.1"
   port = 9142
