--- a/panel/src/main/resources/application.conf
+++ b/panel/src/main/resources/application.conf
@@ -4,6 +4,10 @@ akka {
 }
 
 hmda {
+  adminHost = "0.0.0.0"
+  adminHost = ${?HMDA_HTTP_ADMIN_HOST}
+  adminPort = 8081
+  adminPort = ${?HMDA_HTTP_ADMIN_PORT}
   isDemo = true
   isDemo = ${?HMDA_IS_DEMO}
 }
