--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -36,6 +36,7 @@ constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
 
 clustering {
   name = "hmda"
+  name = ${?HMDA_CLUSTER_NAME}
   ip = "127.0.0.1"
   port = 0
   port = ${?APP_PORT}
