renamed keyspace and added snapshot and journal

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -70,6 +70,7 @@ cassandra-journal {
   contact-points = ["127.0.0.1"]
   contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
   keyspace = "hmda_journal"
+  keyspace = ${CASSANDRA_JOURNAL_KEYSPACE}
   table = "journal"
   keyspace-autocreate = true
   keyspace-autocreate-retries = 5
@@ -82,6 +83,7 @@ cassandra-snapshot-store {
   contact-points = ["127.0.0.1"]
   contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
   keyspace = "hmda_snapshot"
+  keyspace = ${CASSANDRA_SNAPSHOT_KEYSPACE}
   table = "snapshot"
   keyspace-autocreate = true
   keyspace-autocreate-retries = 5
