Use separate EDITS_DEMO_MODE env var to control S025
HMDA_IS_DEMO env var was overloaded. Using separate vars will make it
easier to manage different deployed versions of the app.

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -10,6 +10,8 @@ hmda {
     timeout = 5
   }
   persistent-actor-timeout = 60
+  edits.demoMode = false
+  edits.demoMode = ${?EDITS_DEMO_MODE}
 }
 
 hmda.validation.quality {
