--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -33,9 +33,9 @@ db {
 
 cassandra {
   host = "127.0.0.1"
-  host = ${CASSANDRA_CLUSTER_HOSTS}
+  host = ${?CASSANDRA_CLUSTER_HOSTS}
   port = 9042
-  port = ${CASSANDRA_CLUSTER_PORT}
+  port = ${?CASSANDRA_CLUSTER_PORT}
   keyspace = "hmda_query"
   keyspace = ${?CASSANDRA_QUERY_KEYSPACE}
   retries = 60
