Provide defaults for backend resources

--- a/api/src/main/resources/application-dev.conf
+++ b/api/src/main/resources/application-dev.conf
@@ -26,7 +26,7 @@ akka {
 
 }
 
-constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
+constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
 
 clustering {
   name = "hmda"
@@ -58,6 +58,10 @@ hmda {
   }
   isDemo = true
   actor-flow-parallelism = 4
+  zookeeperHost = "192.168.99.100"
+  zookeeperHost = ${?ZOOKEEPER_HOST}
+  zookeeperPort = 2181
+  zookeeperPort = ${?ZOOKEEPER_PORT}
 }
 
 
