--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -32,7 +32,7 @@ akka {
 
 }
 
-constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
+constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
 
 clustering {
   name = "hmda"
@@ -64,6 +64,10 @@ hmda {
   }
   isDemo = true
   isDemo = ${?HMDA_IS_DEMO}
+  zookeeperHost = "192.168.99.100"
+  zookeeperHost = ${?ZOOKEEPER_HOST}
+  zookeeperPort = 2181
+  zookeeperPort = ${?ZOOKEEPER_PORT}
 }
 
 
