--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -28,11 +28,28 @@ akka {
 
   }
 
+  publication-dispatcher {
+    type = Dispatcher
+    executor = "fork-join-executor"
+    fork-join-executor {
+      # Min number of threads to cap factor-based parallelism number to
+      parallelism-min = 2
+      # Parallelism (threads) ... ceil(available processors * factor)
+      parallelism-factor = 2.0
+      # Max number of threads to cap factor-based parallelism number to
+      parallelism-max = 10
+    }
+    # Throughput defines the maximum number of messages to be
+    # processed per actor before the thread jumps to the next actor.
+    # Set to 1 for as fair as possible.
+    throughput = 100
+  }
+
   extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
 
 }
 
-constructr.coordination.nodes = [${?ZOOKEEPER_HOST}":"${?ZOOKEEPER_PORT}]
+constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
 
 clustering {
   name = "hmda"
@@ -45,4 +62,8 @@ hmda {
   actor {
     timeout = 5
   }
+  zookeeperHost = "192.168.99.100"
+  zookeeperHost = ${?ZOOKEEPER_HOST}
+  zookeeperPort = 2181
+  zookeeperPort = ${?ZOOKEEPER_PORT}
 }
