--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -25,14 +25,15 @@ db {
   driver = "slick.driver.PostgresDriver$"
 
   db {
-    url = ${JDBC_URL}
+    url = "jdbc:postgresql://localhost/hmda?user=postgres&password=postgres"
+    url = ${?JDBC_URL}
     driver = org.postgresql.Driver
     numThreads = 2
   }
 }
 
 cassandra {
-  host = "127.0.0.1"
+  host = "192.168.99.100"
   host = ${?CASSANDRA_CLUSTER_HOSTS}
   port = 9042
   port = ${?CASSANDRA_CLUSTER_PORT}
