Update report generation

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
   loglevel = "INFO"
   actor {
+    provider = cluster
     warn-about-java-serializer-usage = on
     serializers {
       institutionViewState = "hmda.query.serialization.InstitutionViewProtobufSerializer"
@@ -11,6 +12,25 @@ akka {
       "hmda.query.view.filing.HmdaFilingView$FilingViewState" = filingViewState
     }
   }
+
+  remote {
+    log-remote-lifecycle-events = error
+    netty.tcp {
+      hostname = ${clustering.ip}
+      port = ${clustering.port}
+    }
+  }
+
+  cluster {
+    failure-detector.threshold = 12 //Increase value for AWS environments
+    metrics.enabled = off
+
+    retry-unsuccessful-join-after = 20s
+
+    //DON'T USE IN PRODUCTION!!!!!
+    auto-down-unreachable-after = 10s
+
+  }
 }
 
 hmda {
@@ -19,6 +39,10 @@ hmda {
     fetch.size = 32
     group.size = 1000
   }
+  zookeeperHost = "192.168.99.100"
+  zookeeperHost = ${?ZOOKEEPER_HOST}
+  zookeeperPort = 2181
+  zookeeperPort = ${?ZOOKEEPER_PORT}
 }
 
 db {
@@ -30,6 +54,15 @@ db {
     driver = org.postgresql.Driver
     numThreads = 2
   }
+}
+
+constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
+
+clustering {
+  name = "hmda"
+  ip = "127.0.0.1"
+  port = 0
+  port = ${?APP_PORT}
 }
 
 cassandra {
