--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -6,6 +6,9 @@ akka {
   persistence.journal.plugin = "inmemory-journal"
   persistence.query.journal.id =  "inmemory-read-journal"
   persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+  actor {
+    timeout = 5
+  }
 }
 
 akka.test.single-expect-default = 10s
