--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       CASSANDRA_CLUSTER_HOSTS: cassandra
       CASSANDRA_CLUSTER_PORT: 9042
       HMDA_IS_DEMO: 'true'
+      EDITS_DEMO_MODE: 'true'
       # lb settings
       EXCLUDE_PORTS: '8080, 8081' # 8080 proxied through auth_proxy; 8081 (Admin API) doesn't need proxy
       VIRTUAL_HOST: 'https://*:4443/public/*'
