--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -62,7 +62,7 @@ hmda {
     timeout = 10
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
-  isDemo = true
+  isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
 }
 
