--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -101,6 +101,6 @@ cassandra-query-journal {
 hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 3600
-  isDemo = true
+  isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
 }
