--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - '8080:8080'
       - '8081:8081'
       - '8082:8082'
-#    volumes:
-#      - ./target/scala-2.12/hmda.jar:/opt/hmda.jar
+    volumes:
+      - ./target/scala-2.12/hmda.jar:/opt/hmda.jar
     depends_on:
       - cassandra
       - zookeeper
