Configure publication dispatcher

--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -7,6 +7,11 @@ akka {
 
   actor {
     provider = cluster
+    deployment {
+      /hmda-aggregate-disclosure {
+        dispatcher = publication-dispatcher
+      }
+    }
   }
 
   remote {
