--- a/panel/src/main/resources/application.conf
+++ b/panel/src/main/resources/application.conf
@@ -4,9 +4,7 @@ akka {
 }
 
 hmda {
-  adminHost = "0.0.0.0"
-  adminHost = ${?HMDA_HTTP_ADMIN_HOST}
-  adminPort = 80
-  adminPort = ${?HMDA_HTTP_ADMIN_PORT}
+  adminUrl = "http://0.0.0.0:8081"
+  adminUrl = ${?HMDA_HTTP_ADMIN_URL}
 }
 
