Add cluster management

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -26,6 +26,13 @@ akka {
     //DON'T USE IN PRODUCTION!!!!!
     auto-down-unreachable-after = 10s
 
+    http {
+      management {
+        hostname = "127.0.0.1"
+        port = 9999
+      }
+    }
+
   }
 
   extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
