--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -7,11 +7,6 @@ akka {
 
   actor {
     provider = cluster
-    deployment {
-      /hmda-aggregate-disclosure {
-        dispatcher = publication-dispatcher
-      }
-    }
   }
 
   remote {
@@ -23,14 +18,28 @@ akka {
   }
 
   cluster {
+    roles = [publication]
     failure-detector.threshold = 12 //Increase value for AWS environments
     metrics.enabled = off
 
     retry-unsuccessful-join-after = 20s
 
+    http {
+      management {
+        hostname = "127.0.0.1"
+        port = 9999
+      }
+    }
+
+    metrics.enabled = off
+
+    deployment {
+      /publication {
+        dispatcher = publication-dispatcher
+      }
+    }
+
   }
-
-
 
   extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
 
@@ -38,21 +47,25 @@ akka {
 
 constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
 
-clustering {
-  name = "hmda"
-  ip = "127.0.0.1"
-  port = 0
-  port = ${?APP_PORT}
-}
-
 hmda {
   actor {
     timeout = 5
   }
+
+  isDemo = false
+  isDemo = ${?HMDA_IS_DEMO}
   zookeeperHost = "192.168.99.100"
   zookeeperHost = ${?ZOOKEEPER_HOST}
   zookeeperPort = 2181
   zookeeperPort = ${?ZOOKEEPER_PORT}
+}
+
+clustering {
+  name = "hmda"
+  name = ${?HMDA_CLUSTER_NAME}
+  ip = "127.0.0.1"
+  port = 0
+  port = ${?APP_PORT}
 }
 
 publication-dispatcher {
