--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -7,6 +7,15 @@ akka {
 
   actor {
     provider = cluster
+
+    deployment {
+      /publication {
+        dispatcher = publication-dispatcher
+      }
+      /validation-stats {
+        dispatcher = validation-dispatcher
+      }
+    }
   }
 
   remote {
@@ -18,7 +27,7 @@ akka {
   }
 
   cluster {
-    roles = [publication]
+    roles = [api, query, publication]
     failure-detector.threshold = 12 //Increase value for AWS environments
     metrics.enabled = off
 
@@ -33,11 +42,6 @@ akka {
 
     metrics.enabled = off
 
-    deployment {
-      /publication {
-        dispatcher = publication-dispatcher
-      }
-    }
 
   }
 
@@ -69,6 +73,40 @@ clustering {
 }
 
 publication-dispatcher {
+  type = Dispatcher
+  executor = "fork-join-executor"
+  fork-join-executor {
+    # Min number of threads to cap factor-based parallelism number to
+    parallelism-min = 2
+    # Parallelism (threads) ... ceil(available processors * factor)
+    parallelism-factor = 2.0
+    # Max number of threads to cap factor-based parallelism number to
+    parallelism-max = 10
+  }
+  # Throughput defines the maximum number of messages to be
+  # processed per actor before the thread jumps to the next actor.
+  # Set to 1 for as fair as possible.
+  throughput = 100
+}
+
+validation-dispatcher {
+  type = Dispatcher
+  executor = "fork-join-executor"
+  fork-join-executor {
+    # Min number of threads to cap factor-based parallelism number to
+    parallelism-min = 2
+    # Parallelism (threads) ... ceil(available processors * factor)
+    parallelism-factor = 2.0
+    # Max number of threads to cap factor-based parallelism number to
+    parallelism-max = 10
+  }
+  # Throughput defines the maximum number of messages to be
+  # processed per actor before the thread jumps to the next actor.
+  # Set to 1 for as fair as possible.
+  throughput = 100
+}
+
+query-dispatcher {
   type = Dispatcher
   executor = "fork-join-executor"
   fork-join-executor {
