--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -12,9 +12,6 @@ akka {
       /publication {
         dispatcher = publication-dispatcher
       }
-      /validation-stats {
-        dispatcher = validation-dispatcher
-      }
     }
   }
 
@@ -27,7 +24,7 @@ akka {
   }
 
   cluster {
-    roles = [api, query, publication]
+    roles = [api, query, publication, validation]
     failure-detector.threshold = 12 //Increase value for AWS environments
     metrics.enabled = off
 
@@ -89,22 +86,7 @@ publication-dispatcher {
   throughput = 100
 }
 
-validation-dispatcher {
-  type = Dispatcher
-  executor = "fork-join-executor"
-  fork-join-executor {
-    # Min number of threads to cap factor-based parallelism number to
-    parallelism-min = 2
-    # Parallelism (threads) ... ceil(available processors * factor)
-    parallelism-factor = 2.0
-    # Max number of threads to cap factor-based parallelism number to
-    parallelism-max = 10
-  }
-  # Throughput defines the maximum number of messages to be
-  # processed per actor before the thread jumps to the next actor.
-  # Set to 1 for as fair as possible.
-  throughput = 100
-}
+
 
 query-dispatcher {
   type = Dispatcher
