Move publication configuration to same project

--- a/publication/src/test/resources/application.conf
+++ b/publication/src/test/resources/application.conf
@@ -6,6 +6,8 @@ akka {
   http.server.default-host-header = "cfpb.gov"
 }
 
+akka.cluster.metrics.enabled = off
+
 hmda {
   actor {
     timeout = 5
