Move query configuration to its project

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -14,6 +14,8 @@ akka {
   }
 }
 
+akka.cluster.metrics.enabled = off
+
 hmda {
   journal.snapshot.counter = 100
   query {
@@ -42,6 +44,23 @@ cassandra {
   keyspace = ${?CASSANDRA_QUERY_KEYSPACE}
   retries = 60
   retry-interval = 1000
+}
+
+query-dispatcher {
+  type = Dispatcher
+  executor = "fork-join-executor"
+  fork-join-executor {
+    # Min number of threads to cap factor-based parallelism number to
+    parallelism-min = 2
+    # Parallelism (threads) ... ceil(available processors * factor)
+    parallelism-factor = 2.0
+    # Max number of threads to cap factor-based parallelism number to
+    parallelism-max = 10
+  }
+  # Throughput defines the maximum number of messages to be
+  # processed per actor before the thread jumps to the next actor.
+  # Set to 1 for as fair as possible.
+  throughput = 100
 }
 
 
