Put back cluster config in query project

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -12,6 +12,22 @@ akka {
       "hmda.query.view.filing.HmdaFilingView$FilingViewState" = filingViewState
     }
   }
+
+  remote {
+    log-remote-lifecycle-events = error
+    netty.tcp {
+      hostname = ${clustering.ip}
+      port = ${clustering.port}
+    }
+  }
+
+  cluster {
+    failure-detector.threshold = 12 //Increase value for AWS environments
+    metrics.enabled = off
+
+    retry-unsuccessful-join-after = 20s
+
+  }
 }
 
 akka.cluster.metrics.enabled = off
@@ -22,6 +38,10 @@ hmda {
     fetch.size = 32
     group.size = 1000
   }
+  zookeeperHost = "192.168.99.100"
+  zookeeperHost = ${?ZOOKEEPER_HOST}
+  zookeeperPort = 2181
+  zookeeperPort = ${?ZOOKEEPER_PORT}
 }
 
 db {
@@ -33,6 +53,15 @@ db {
     driver = org.postgresql.Driver
     numThreads = 2
   }
+}
+
+constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
+
+clustering {
+  name = "hmda"
+  ip = "127.0.0.1"
+  port = 0
+  port = ${?APP_PORT}
 }
 
 cassandra {
