Add persistence to cluster roles

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -1,3 +1,14 @@
+akka {
+  actor {
+    deployment {
+      /supervisor/larValidation {
+        dispatcher = persistence-dispatcher
+      }
+    }
+  }
+}
+
+
 hmda {
   actor-flow-parallelism = 4
 }
