--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -18,7 +18,7 @@ akka {
   }
 
   cluster {
-    roles = [api, query, publication, validation]
+    roles = [api, persistence, query, publication, validation]
     failure-detector.threshold = 12 //Increase value for AWS environments
     metrics.enabled = off
 
