--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -46,7 +46,7 @@ hmda {
     timeout = 5
   }
 
-  isDemo = true
+  isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
   zookeeperHost = "192.168.99.100"
   zookeeperHost = ${?ZOOKEEPER_HOST}
