Convert validation stats to cluster singleton

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -46,6 +46,8 @@ hmda {
     timeout = 5
   }
 
+  persistent-actor-timeout = 3600
+
   isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
   zookeeperHost = "192.168.99.100"
