Turn log level to DEBUG

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   stdout-loglevel = "DEBUG"
-  loglevel = "OFF"
+  loglevel = "DEBUG"
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
   deployment {
