Add authentication for cassandra journal and snapshot stores

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -77,6 +77,10 @@ cassandra-journal {
   connect-retries = 10
   connect-retry-delay = 5s
   reconnect-max-delay = 60s
+  authentication.username = ""
+  authentication.username = ${?CASSANDRA_CLUSTER_USERNAME}
+  authentication.password = ""
+  authentication.password = ${?CASSANDRA_CLUSTER_PASSWORD}
 }
 
 cassandra-snapshot-store {
@@ -90,6 +94,10 @@ cassandra-snapshot-store {
   connect-retries = 10
   connect-retry-delay = 5s
   reconnect-max-delay = 60s
+  authentication.username = ""
+  authentication.username = ${?CASSANDRA_CLUSTER_USERNAME}
+  authentication.password = ""
+  authentication.password = ${?CASSANDRA_CLUSTER_PASSWORD}
 }
 
 cassandra-query-journal {
