Fix validation tests

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -29,6 +29,7 @@ hmda {
   persistent-actor-timeout = 60
   edits.demoMode = false
   edits.demoMode = ${?EDITS_DEMO_MODE}
+  isClustered = true
 }
 
 hmda.validation.quality {
