Add runtime configurable log level

--- a/api/src/main/resources/application-dev.conf
+++ b/api/src/main/resources/application-dev.conf
@@ -1,6 +1,7 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "INFO"
+  loglevel = ${?HMDA_LOGLEVEL}
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
