--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
-  stdout-loglevel = "DEBUG"
-  loglevel = "OFF"
+  stdout-loglevel = "OFF"
+  loglevel = "INFO"
+  loglevel = ${?HMDA_LOGLEVEL}
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
 
@@ -9,6 +10,9 @@ akka {
       /validation-stats {
         dispatcher = validation-dispatcher
       }
+    }
+    debug {
+      event-stream = off
     }
   }
 }
