Add isClustered configuration for tests

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -23,6 +23,7 @@ hmda {
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
   isDemo = false
+  isClustered = false
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
