Make sure edits.demoMode = false in persistence project by default

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -11,6 +11,8 @@ akka {
 
 hmda {
   actor-flow-parallelism = 4
+  edits.demoMode = false
+  edits.demoMode = ${?EDITS_DEMO_MODE}
 }
 
 persistence-dispatcher {
