Remove FileNameAdded from HmdaRawFile
Now file name is handled by SubmissionPersistence

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -23,10 +23,10 @@ akka {
       "hmda.persistence.messages.events.institutions.FilingEvents$FilingStatusUpdated" = filing
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionCreated" = submission
       "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionStatusUpdated" = submission
+      "hmda.persistence.messages.events.institutions.SubmissionEvents$SubmissionFileNameAdded" = submission
       "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$LarValidated" = hmdaValidator
       "hmda.persistence.messages.events.processing.CommonHmdaValidatorEvents$TsValidated" = hmdaValidator
       "hmda.persistence.messages.events.processing.FileUploadEvents$LineAdded" = upload
-      "hmda.persistence.messages.events.processing.FileUploadEvents$FileNameAdded" = upload
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$TsParsed" = parser
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$TsParsedErrors" = parser
       "hmda.persistence.messages.events.processing.HmdaFileParserEvents$LarParsed" = parser
