--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - nvm use 0.10.36
 
 script: 
-  - sbt ++$TRAVIS_SCALA_VERSION clean compile test:compile test
+  - sbt ++$TRAVIS_SCALA_VERSION clean coverage compile test:compile test
   - sbt ++$TRAVIS_SCALA_VERSION coverageReport
   - sbt ++$TRAVIS_SCALA_VERSION coverageAggregate
   
